Milestone 1: just made my first submission :-)

--- a/rossman/Predict_3.ipynb
+++ b/rossman/Predict_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
@@ -13,6 +13,7 @@
     "# pandas\n",
     "import pandas as pd\n",
     "from pandas import Series,DataFrame\n",
+    "import random\n",
     "\n",
     "# numpy, matplotlib, seaborn\n",
     "import numpy as np\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 225,
    "metadata": {
     "collapsed": false
    },
@@ -41,45 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.260137435331\n",
-      "0.260137435331\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def ToWeight(y):\n",
-    "    w = np.zeros(y.shape, dtype=float)\n",
-    "    ind = y != 0\n",
-    "    w[ind] = 1./(y[ind]**2)\n",
-    "    return w\n",
-    "\n",
-    "def RMSPE(y, yhat):\n",
+    "def rmspe(y, yhat):\n",
     "    y = y.astype('float')\n",
     "    yhat = yhat.astype('float')\n",
-    "    # Note: y's shape is n x 1\n",
-    "    w = ToWeight(y)\n",
-    "    rmspe = np.sqrt(np.mean( w * (y - yhat)**2 ))\n",
-    "    return rmspe\n",
-    "\n",
-    "def rmspe(Y_test, preds):\n",
-    "    Y_test = Y_test.astype('float')\n",
-    "    preds = preds.astype('float')\n",
-    "    inner = ((preds-Y_test)/Y_test)**2\n",
-    "    return (np.mean(inner))**0.5\n",
-    "\n",
-    "y1 = np.array([4,5,6,7]).astype('float')\n",
-    "yhat1 = np.array([3,7,7,8]).astype('float')\n",
-    "print RMSPE(y1, yhat1)\n",
-    "print rmspe(y1, yhat1)"
+    "    inner = ((y-yhat)/y)**2\n",
+    "    return (np.mean(inner))**0.5"
    ]
   },
   {
@@ -91,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 227,
    "metadata": {
     "collapsed": true
    },
@@ -109,29 +82,12 @@
     "train_df = train_df[train_df['Open'] == 1]\n",
     "\n",
     "# Keep only records with non-zero sales\n",
-    "train_df = train_df[train_df['Sales'] > 0]\n",
-    "\n",
-    "# For each store, find its first opening day and merge it into store_df\n",
-    "storeOpenDays = train_df.groupby('Store')['Date'].min()\n",
-    "d = pd.DataFrame(storeOpenDays)\n",
-    "d = d.rename(columns = {'Date':'OpenDay'})\n",
-    "store_df = pd.merge(store_df, d, left_on = 'Store', right_index = True) \n",
-    "\n",
-    "# For each store, convert it's competitor open day into a Date column\n",
-    "competitorOpenDay = store_df.apply(lambda row: np.nan \n",
-    "        if pd.isnull(row['CompetitionOpenSinceMonth']) or pd.isnull(row['CompetitionOpenSinceYear'])\n",
-    "        else np.datetime64(\"%d-%02d-01\" % (int(row['CompetitionOpenSinceYear']), int(row['CompetitionOpenSinceMonth']))), \n",
-    "        axis=1)\n",
-    "\n",
-    "store_df[\"CompetitorOpenDay\"] = competitorOpenDay\n",
-    "\n",
-    "# For those stores with empty CompetitorOpenDay date, set it to the same as StoreOpenDay\n",
-    "store_df.ix[:, 'CompetitorOpenDay'] = store_df[\"CompetitorOpenDay\"].fillna(store_df['OpenDay'])"
+    "train_df = train_df[train_df['Sales'] > 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 229,
    "metadata": {
     "collapsed": true
    },
@@ -178,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 230,
    "metadata": {
     "collapsed": true
    },
@@ -189,67 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 231,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "train_data.set_index('Date', inplace=True)\n",
-    "train_data.sort_index(inplace=True)"
+    "train_data.sort_index(inplace=True)\n",
+    "#train_data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([u'Store', u'Sales', u'Customers', u'Open', u'DayOfWeek_1',\n",
-       "       u'DayOfWeek_2', u'DayOfWeek_3', u'DayOfWeek_4', u'DayOfWeek_5',\n",
-       "       u'DayOfWeek_6', u'DayOfWeek_7', u'Promo_0', u'Promo_1',\n",
-       "       u'StateHoliday_0', u'StateHoliday_a', u'StateHoliday_b',\n",
-       "       u'StateHoliday_c', u'SchoolHoliday_0', u'SchoolHoliday_1',\n",
-       "       u'StoreType_a', u'StoreType_b', u'StoreType_c', u'StoreType_d',\n",
-       "       u'Assortment_a', u'Assortment_b', u'Assortment_c'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def getX(data, *args):\n",
-    "    x_drop_cols = ['Store', 'Open'] + list(args)\n",
-    "    \n",
-    "    train_cols = ['Sales', 'Customers']\n",
-    "    for c in train_cols:\n",
-    "        if c in data.columns:\n",
-    "            x_drop_cols.append(c)\n",
-    "        \n",
-    "    return data.drop(x_drop_cols, axis=1, inplace=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 232,
    "metadata": {
     "collapsed": false
    },
@@ -270,6 +179,7 @@
     "    \n",
     "    train_set_grouped = train_set.groupby('Store')\n",
     "    dev_set_grouped = dev_set.groupby('Store')\n",
+    "    cols = None\n",
     "\n",
     "    for group in train_set_grouped.groups.keys():\n",
     "        x_drop_cols = ['Store', 'Sales', 'Customers', 'Open']\n",
@@ -288,14 +198,15 @@
     "\n",
     "        all_y.extend(dev_y.tolist())\n",
     "        all_yhat.extend(yhat.tolist())\n",
-    "\n",
+    "        \n",
     "    print \"Training model - dev data RMSPE=\", RMSPE(np.array(all_y), np.array(all_yhat))\n",
+    "    \n",
     "    return lms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 233,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +217,7 @@
      "text": [
       "train_set size: 785727\n",
       "dev_set size: 58611\n",
-      "Training model - dev data RMSPE= 0.151001136238\n"
+      "Training model - dev data RMSPE= 0.150966292575\n"
      ]
     }
    ],
@@ -323,84 +234,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "test_full_df = pd.merge(test_df, store_df.ix[:,['StoreType', 'Assortment', 'Store']], on='Store')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 234,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "test_data = transformData(test_full_df)"
+    "def makePredictions(data):\n",
+    "    test_ids = []\n",
+    "    test_yhats = []\n",
+    "\n",
+    "    grouped = data.groupby('Store')\n",
+    "\n",
+    "    for storeId, group in grouped:\n",
+    "        x_drop_cols = ['Id', 'Open', 'Store', 'Date']\n",
+    "\n",
+    "        ids = group['Id']\n",
+    "        X = group.drop(x_drop_cols, axis=1, inplace=False)\n",
+    "\n",
+    "        yhat = models[storeId].predict(X)\n",
+    "\n",
+    "        # Ignore prediction and set Sales to zero hen the store is closed\n",
+    "        yhat[np.array(group['Open'] == 0)] = 0\n",
+    "        test_yhats += yhat.tolist()\n",
+    "        test_ids += ids.tolist()\n",
+    "\n",
+    "    res = [[i, y] for i, y in zip(test_ids, test_yhats)]\n",
+    "    return sorted(res, key=lambda x: x[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index([u'Id', u'Store', u'Date', u'Open', u'DayOfWeek_1', u'DayOfWeek_2',\n",
-       "       u'DayOfWeek_3', u'DayOfWeek_4', u'DayOfWeek_5', u'DayOfWeek_6',\n",
-       "       u'DayOfWeek_7', u'Promo_0', u'Promo_1', u'StateHoliday_0',\n",
-       "       u'StateHoliday_a', u'StateHoliday_b', u'StateHoliday_c',\n",
-       "       u'SchoolHoliday_0', u'SchoolHoliday_1', u'StoreType_a', u'StoreType_b',\n",
-       "       u'StoreType_c', u'StoreType_d', u'Assortment_a', u'Assortment_b',\n",
-       "       u'Assortment_c'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 235,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "all_yhat = []\n",
+    "test_full_df = pd.merge(test_df, store_df.ix[:,['StoreType', 'Assortment', 'Store']], on='Store')\n",
+    "test_data = transformData(test_full_df)\n",
+    "result = makePredictions(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "f = open(\"submission.csv\", \"w\")\n",
+    "f.write('\"Id\",\"Sales\"\\n')\n",
     "\n",
-    "test_set_grouped = train_set.groupby('Store')\n",
+    "for r in result:\n",
+    "    f.write(\"%d,%d\\n\" % (r[0],int(r[1])))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Misc stuff ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def littleTest():\n",
+    "    # Test prediction using some input generated from training data\n",
+    "    random_idx = random.sample(train_df.index.tolist(), 100)\n",
     "\n",
-    "for group in test_set_grouped.groups.keys():\n",
-    "    x_drop_cols = ['Store', 'Open']\n",
+    "    try_df = train_df.loc[random_idx]\n",
+    "    try_y = try_df['Sales']\n",
+    "    try_df.drop(['Sales', 'Customers'], axis=1, inplace=True)\n",
+    "    try_df[\"Id\"] = range(1, len(try_df) + 1)\n",
+    "    try_data = transformData(pd.merge(try_df, store_df.ix[:,['StoreType', 'Assortment', 'Store']], on='Store'))\n",
     "\n",
-    "    train_X = getX(train_set_grouped.get_group(group))\n",
-    "    train_y = train_set_grouped.get_group(group)['Sales']\n",
+    "    result = makePredictions(try_data)\n",
+    "    try_yhat = np.array([r[1] for r in result])\n",
     "\n",
-    "    dev_X = getX(dev_set_grouped.get_group(group))\n",
-    "    dev_y = dev_set_grouped.get_group(group)['Sales']\n",
-    "\n",
-    "    # One model per store\n",
-    "    lm = linear_model.LinearRegression()\n",
-    "    lm.fit(X=train_X, y=train_y)\n",
-    "    lms[group] = lm\n",
-    "    yhat = lm.predict(dev_X)\n",
-    "\n",
-    "    all_y.extend(dev_y.tolist())\n",
-    "    all_yhat.extend(yhat.tolist())"
+    "    print rmspe(try_y, try_yhat)"
    ]
   },
   {
