--- a/rossman/Predict_3.ipynb
+++ b/rossman/Predict_3.ipynb
@@ -182,8 +182,7 @@
     }
    ],
    "source": [
-    "train_data.columns\n",
-    "#print train_data.iloc[8000]"
+    "train_data.columns\n"
    ]
   },
   {
